Almost ready. Just some tests ToDo

--- a/Thesis/bibliografia.bib
+++ b/Thesis/bibliografia.bib
@@ -130,3 +130,8 @@ number = {YCS-2003-348}
   title       = {Nota aplikacyjna maszyn stanów układu LSM6DSOX},
   howpublished = "\url{https://www.st.com/resource/en/application_note/dm00572971-lsm6dsox-finite-state-machine-stmicroelectronics.pdf}"
 }
+
+@manual{polte,
+  title       	= {POLTE website - How it works?},
+  howpublished  = "\url{https://www.polte.com/our-technology/how-it-works/}"
+}
