Added some articles

--- a/Thesis/bibliografia.bib
+++ b/Thesis/bibliografia.bib
@@ -135,3 +135,25 @@ number = {YCS-2003-348}
   title       	= {POLTE website - How it works?},
   howpublished  = "\url{https://www.polte.com/our-technology/how-it-works/}"
 }
+
+@article{moca_acc,
+author = {Farella, Elisabetta and Benini, Luca and Riccò, Bruno and Acquaviva, Andrea},
+year = {2007},
+month = {05},
+pages = {},
+title = {MOCA: A Low-Power, Low-Cost Motion Capture System Based on Integrated Accelerometers},
+volume = {2007},
+journal = {Advances in Multimedia},
+doi = {10.1155/2007/82638}
+}
+
+@article{collisions,
+author = {Spörri, Emilian and Halvachizadeh, Sascha and Gamble, Jamison and Allemann, Florin and Pape, Hans and Rauer, Thomas and Pfeifer, Roman and Herr, Daniel},
+year = {2021},
+month = {07},
+pages = {3359},
+title = {Comparison of Injury Patterns between Electric Bicycle, Bicycle and Motorcycle Accidents},
+volume = {2021},
+journal = {Journal of Clinical Medicine},
+doi = {10.3390/jcm10153359}
+}
