--- a/Thesis/wstep.tex
+++ b/Thesis/wstep.tex
@@ -11,12 +11,11 @@ Temat bezpieczeństwa rowerzystów, jest tematem wielokrotnie podnoszonym w medi
 Rowerzyści górscy, podczas samotnych wypraw rowerowych, wielokrotnie zastanawiają się, co w sytuacji, gdy ulegną wypadkowi podczas samotnej wyprawy?
 Jak długo nikt nie wezwie pomocy? W ten sposób, powstał pomysł stworzenia urządzenia asystującego.
 \newline
-Celem pracy było stworzenie innowacyjnego urządzenia wykrywającego upadek na rowerze. Urządzenie miało być przymocowane do ramy roweru. Urządzenie, informację o wypadku wysyła przy użyciu modemu LTE-M opartego o interfejs szeregowy UART. Za lokalizowanie urządzenia, odpowiadać będzie moduł GPS oparty o magistralę $I^{2}C$. Całość, sterowana będzie przy użyciu mikrokontrolera. W prototypie, zdecydowano się na użycie akcelerometru. Są one powszechnie stosowane w rozwiązaniach związanych z rozpoznawaniem gestów. Przykład rozwiązania opartego na akcelerometrze, opaisano w artykule pt. ,,MOCA: A Low-Power, Low-Cost Motion Capture System
-Based on Integrated Accelerometers''.\cite{moca_acc} Artykuł, wskazuje
+Celem pracy było stworzenie niezależnego układu, wykrywającego upadek na rowerze. Urządzenie miało być przymocowane do ramy roweru. Informację o wypadku wysyłało przy użyciu modemu LTE-M opartego o interfejs szeregowy UART. Za lokalizowanie urządzenia, odpowiadał moduł GPS oparty o magistralę $I^{2}C$. Całość, sterowana była przy użyciu mikrokontrolera. W prototypie, zdecydowano się na użycie akcelerometru. Są one powszechnie stosowane w rozwiązaniach związanych z rozpoznawaniem gestów. Przykład rozwiązania opartego na akcelerometrze oraz przykład podejścia do problemu stworzenia takiego układu, opisano w artykule pt. ,,MOCA: A Low-Power, Low-Cost Motion Capture System Based on Integrated Accelerometers''.\cite{moca_acc}
 
 \section{Analiza wymagań technicznych i dobór komponentów}
 \label{sec:technical_analysis}
-Docelowo, urządzenie miało zwiększać bezpieczeństwo podczas wypraw rowerowych. Musiało więc być bardzo energooszczędne. Minimalne wymaganie, to 24 godziny pracy na jednym ładowaniu baterii. Jednocześnie, nie może być zbyt duże, aby w łatwy sposób można było zamontować je na rowerze. Pobierana lokalizacja, miała mieć dokładność około 100m. Jest to dokładność wystarczająca, aby zobaczyć ranną osobę, leżący rower, lub usłyszeć wołanie o pomoc. Ważnym było, aby urządzenie, było w pełni niezależne od innych układów, jak np. telefon.
+Docelowo, urządzenie miało zwiększać bezpieczeństwo podczas wypraw rowerowych. Musiało więc być bardzo energooszczędne. Minimalne wymaganie, to 72 godziny pracy na jednym ładowaniu baterii. Jednocześnie, nie mogło być zbyt duże, aby w łatwy sposób można było zamontować je na rowerze. Pobierana lokalizacja, miała mieć dokładność około 100m. Jest to dokładność wystarczająca, aby zobaczyć ranną osobę, leżący rower, lub usłyszeć wołanie o pomoc. Ważnym było, aby urządzenie, było w pełni niezależne od innych układów, jak np. telefon.
 \newline
 Planując pracę, zdecydowano się wykorzystać trzy moduły:
 \begin{itemize}
@@ -26,28 +25,26 @@ Planując pracę, zdecydowano się wykorzystać trzy moduły:
 \end{itemize}
 Dodatkowo, ze względu na łatwy w użyciu stos Bluetooth, wykorzystano również Bluetooth Low Energy, celem stworzenia bezprzewodowego interfejsu sterowania urządzeniem.
 \newline
-Ponieważna rynku dostępnych było wiele różnych modułów, poniżej dokonano ich porównania oraz wyboru układów, najbardziej pasujących do stworzonego rozwiązania.
+Na rynku dostępnych było wiele różnych modułów, poniżej dokonano ich porównania oraz wyboru układów, najbardziej pasujących do stworzonego rozwiązania. Dla każdej z kategorii wybrano trzy układy, znajdujące się w zasobach autora.
 
 \subsection{Akcelerometr}
-Akcelerometry to układy, mierzące przyspieszenie. Mogą dokonać pomiaru przyspieszenia statycznego (np. Ziemskiego), lub dynamicznego, działającego z sił, działających na układ. W przypadku dostępnych na rynku akcelerometrów należy pamiętać, że w stanie spoczynku wskazują one przyspieszenie około $9.81\frac{m}{s^{2}}$. Można więc było, wykorzystać ten fakt, do implementacji algorytmu.
+Akcelerometry to układy, mierzące przyspieszenie. Mogą dokonać pomiaru przyspieszenia statycznego (np. Ziemskiego), lub dynamicznego, wynikającego z sił, działających na układ. W przypadku dostępnych na rynku akcelerometrów należy pamiętać, że w stanie spoczynku, wskazują one przyspieszenie około $9.81\frac{m}{s^{2}}$. Można więc było, wykorzystać ten fakt, do implementacji algorytmu.
 \newline
-Obecnie, większość układów to układy integrujące akcelerometr i żyroskop w jednym układzie scalonym. Coraz częściej, można też spotkać magnetometr. Dla obecnych na rynku układów, wyróżniamy dwa najważniejsze parametry:
+Obecnie, większość układów to integruje akcelerometr i żyroskop w jednym układzie scalonym. Coraz częściej, można też spotkać magnetometr. Dla obecnych na rynku scalaków, wyróżniamy dwa najważniejsze parametry:
 \begin{itemize}
     \item Zakres pracy akcelerometru - określany jako $\pm X_{g}$, a więc przyspieszenie w trzech kierunkach, podane jako wielokrotność przyspieszenia Ziemskiego. Zazwyczaj, wartość ta, mieści się w przedziale od kilku, do kilkunastu g.
     \item Zakres pomiarów żyroskopu - określony jako \emph{dps (degrees per second)}. Jeśli prędkość kątowa będzie większa, niż wybrany zakres, układ ulegnie nasyceniu
 \end{itemize}
-Głównym wymaganiem dotyczącym akcelerometru, była jego energooszczędność. Był to jedyny układ, który działa przez cały czas. Z tego powodu, akcelerometr powinien był nie tylko zużywać mało prądu, ale również posiadać różne tryby pracy. Dodatkowym atutem, była wbudowana pamięć, pozwalająca na buforowanie danych.
-\newline
-Spośród dostępnych na rynku układów, wybrane zostały trzy, dostępne w trakcie tworzenia pracy.
+Głównym wymaganiem dotyczącym akcelerometru, była jego energooszczędność. Był to jedyny element, który działa przez cały czas. Z tego powodu, akcelerometr powinien był nie tylko zużywać mało prądu, ale również posiadać różne tryby pracy. Dodatkowym atutem, była wbudowana pamięć, pozwalająca na buforowanie danych.
 
 \subsubsection{MPU-6050}
-Wybrany układ, jest 3-osiowym akcelerometem i żyroskopem. Korzysta on z magistrali $I^{2}C$. Zgodnie z dokumentacją układu, w normalnym trybie pracy, można spodziewać się ok. 3.8mA prądu, pobieranego przez układ.\cite{MPU6050} Wartość tę, można zredukować do nawet 10$\mu$A, ograniczając częstotliwość próbkowania akcelerometru do 1.25Hz i wyłączając żyroskop. Ponadto, układ posiada tryb niskiego zużycia energii, pozwalający uśpić nieaktywny układ. Sam akcelerometr, pracuje w zakresie $\pm$2g, $\pm$4g, $\pm$8g oraz $\pm$16g. Dodatkowo, układ posiada tzw. Digital Motion Pocessor (DMP), czyli układ wspomagający przetwarzanie danych w kierunku wykrywania gestów. Wbudowane FIFO, pozwala na buforowanie danych. Zaletą akcelerometru, są programowalne przerwania oraz przerwanie "High-G", wyzwalane w momencie przekroczenia zdefiniowanego przyspieszenia.
+Wybrany układ, jest 3-osiowym akcelerometem i żyroskopem. Korzysta on z magistrali $I^{2}$C. Zgodnie z dokumentacją układu, w normalnym trybie pracy, można spodziewać się ok. 3.8mA prądu, pobieranego przez układ.\cite{MPU6050} Wartość tę, można zredukować do nawet 10$\mu$A, ograniczając częstotliwość próbkowania akcelerometru do 1.25Hz i wyłączając żyroskop. Ponadto, układ posiada tryb niskiego zużycia energii, pozwalający uśpić nieaktywny układ. Sam akcelerometr, pracuje w zakresie $\pm$2g, $\pm$4g, $\pm$8g oraz $\pm$16g. Dodatkowo, układ posiada tzw. Digital Motion Pocessor (DMP), czyli układ wspomagający przetwarzanie danych w kierunku wykrywania gestów. Wbudowane FIFO, pozwala na buforowanie danych. Zaletą akcelerometru, są programowalne przerwania oraz przerwanie "High-G", wyzwalane w momencie przekroczenia zdefiniowanego przyspieszenia.
 
 \subsubsection{LSM9DS1}
 Układ ten, nie różni się znacząco od MPU-6050. Zgodnie z dokumentacją, jest on dodatkowo wyposażony w magnetometr. Największą z różnic, jest pobierany przez niego prąd. W przypadku LSM9DS1, akcelerometr w trybie normalnym, pobiera około 600$\mu$A.\cite{LSM9DS1} Niestety, wykorzystanie żyroskopu, dodaje kolejne 4mA. Żyroskop, posiada tryb niskiego zużycia energii, pozwalający ograniczyć zużycie energii do 1.9mA. Tym samym, układ nie jest w stanie zejść poniżej 1.96mA, co znacząco przekraczało domniemany pobór prądu.
 
 \subsubsection{LSM6DSOX}
-Ostatni z wybranych układów, był układem producenta ST. Jest on dedykowany do rozwiązań, o niskim zużyciu energii. Według dokumentacji, jego zużycie energii to 550$\mu$A.\cite{LSM6DSOX} Wartość ta, jest kilkukrotnie niższa, niż w przypadku MPU-6050. Co więcej, układ posiada tryb LowPower, w którym zużycie energii można ograniczyć do nawet 4$\mu$A. LSM6DSOX, posiada również 9kB FIFO, po którego napełnieniu, wystawiane jest przerwanie. Dodatkową zaletą, jest szesnaście programowalnych maszyn stanów. Pozwalają one na maksymalne ograniczanie zużycia energii, dzięki możliwości wyłączenia mikrokontrolera w trybie analizy danych. LSM6DSOX, do komunikacji wykorzystuje $I^{2}C$. Pozostałe jego parametry, są zbliżone do opisywanych wcześniej.
+Ostatni z wybranych układów, był układem producenta ST. Jest on dedykowany do rozwiązań, o niskim zużyciu energii. Według dokumentacji, jego zużycie energii to 550$\mu$A.\cite{LSM6DSOX} Wartość ta, jest kilkukrotnie niższa, niż w przypadku MPU-6050. Co więcej, układ posiada tryb LowPower, w którym zużycie energii można ograniczyć do nawet 4$\mu$A. LSM6DSOX, posiada również 9kB FIFO, po którego napełnieniu, wystawiane jest przerwanie. Dodatkową zaletą, jest szesnaście programowalnych maszyn stanów. Pozwalają one na maksymalne ograniczanie zużycia energii, dzięki możliwości wyłączenia mikrokontrolera w trybie analizy danych. LSM6DSOX, do komunikacji wykorzystuje $I^{2}$C. Pozostałe jego parametry, są zbliżone do opisywanych wcześniej.
 
 \subsubsection{Wybór akcelerometru}
 Spośród trzech dostępnych układów, wybrany został LSM6DSOX. Jak pokazuje tabela \ref{tab:accelerometer}, układy te, są stosunkowo podobne. Decydującym elementem, okazały się być maszyny stanów, wbudowane w akcelerometr. Pozwoliły one znacząco ograniczyć zużycie energii całego układu oraz przyspieszyć proces tworzenia aplikacji.
@@ -72,19 +69,19 @@ Spośród trzech dostępnych układów, wybrany został LSM6DSOX. Jak pokazuje t
 \end{table}
 
 \subsection{Mikrokontroler}
-Mikrokontroler, jest mózgiem układu. z tego powodu, wybrany układ musiał być bardzo wydajny, ale Jednocześnie energooszczędny. Kolejnym z wymagań, była obsługa interfejsu I$^{2}$C oraj UART. Ponieważ wybrany akcelerometr posiada dwa piny przerwań zewnętrznych, mikrokontroler musiał być gotowy je obsłużyć.
+Mikrokontroler, jest mózgiem układu. z tego powodu, wybrany układ musiał być bardzo wydajny, ale jednocześnie energooszczędny. Kolejnym z wymagań, była obsługa interfejsu I$^{2}$C oraz UART. Ponieważ wybrany akcelerometr posiada dwa piny przerwań zewnętrznych, mikrokontroler musiał być gotowy je obsłużyć.
 
 \subsubsection{ATmega328p}
 Mikrokontroler ATmega328p, to jeden z najpopularniejszych układów na rynku. Jego niska cena i łatwość użycia, pozwala budować najróżniejsze aplikacje. Układ wspiera zewnętrzny zegar o częstotliwości do 16MHz. Posiada on UART, I$^{2}$C oraz SPI, co pozwoliło rozważyć go w pracy. Dodatkowo, w dokumentacji, można znaleźć informację o dwóch przerwaniach zewnętrznych, obsługiwanych przez układ.\cite{ATMEGA328P} Dla najwyższej częstotliwości, podczas pracy układ pobiera 9-14mA. Wartość ta, może zostać ograniczona do 2.8mA w trybie czuwania. W trybie zupełnego uśpienia, mikrokontroler pobiera pomiędzy 44, a 66$\mu$A.
 
 \subsubsection{STM32F303K8}
-Układ STM32F303K8 oparty jest na rdzeniu ARM Cortex M4. Posiada on wbudowany układ czasu rzeczywistego z funkcją wybudzania z kalendarzem. 11 wbudowanych liczników, pozwala na budowanie wyjątkowo złożonych aplikacji. Mikrokontroler wyposażono w SPI, I$^{2}$C, SPI, oraz 3 UARTy. W przypadku rdzeni Cortex, każdy z pinów może być skonfigurowany jako przerwanie, co daje nam aż 60 przerwań. \cite{STM32F303K8} Układ, może być taktowany zewnętrznym zegarem o częstotliwości do 32MHz, a więc dwukrotnie większym, niż w przypadku kontrolera ATmega. STM32F303K8 pobiera (w zależności od konfiguracji) 12.9 - 34mA w trybie pracy oraz 0.93-18.57$\mu$A w trybie głębokiego uśpienia. Warto zaznaczyć, że wartości maksymalneukład osiąga, gdy wszystkie peryferia są uruchomione. W przypadku tej pracy, dążono do minimalizacji ilości działających podzespołów.
+Układ STM32F303K8 oparty jest na rdzeniu ARM Cortex M4. Posiada on wbudowany układ czasu rzeczywistego, z funkcją wybudzania z kalendarzem. 11 wbudowanych liczników, pozwala na budowanie wyjątkowo złożonych aplikacji. Mikrokontroler wyposażono w SPI, I$^{2}$C, SPI, oraz 3 UARTy. W przypadku rdzeni Cortex, każdy z pinów może być skonfigurowany jako przerwanie, co daje nam aż 32 lub 64 przerwania. \cite{STM32F303K8} Układ, może być taktowany zewnętrznym zegarem o częstotliwości do 32MHz, a więc dwukrotnie większym, niż w przypadku kontrolera ATmega. STM32F303K8 pobiera (w zależności od konfiguracji) 12.9 - 34mA w trybie pracy oraz 0.93-18.57$\mu$A w trybie głębokiego uśpienia. Warto zaznaczyć, że wartości maksymalne, układ osiąga, gdy wszystkie peryferia są uruchomione. W przypadku tej pracy, dążono do minimalizacji ilości działających podzespołów.
 
 \subsubsection{nRF52840}
 Mikrokontroler nRF52840 jest najmocniejszym spośród wybranych do tego porównania. Oparty na rdzeniu ARM Cortex M4, taktowany zegarem 64MHz, posiada 1MB pamięci flash oraz 256kB RAM. Wspiera on I$^{2}$C, 4x SPI, 2x UART i 3xRTC. Obsługuje też Bluetooth, co wyróżnia go na tle dwóch pozostałych układów. Mimo, że posiada on tak dużo peryferiów, jego zużycie energii w trybach głębokiego uśpienia mieści się pmiędzy 0.4uA, a 17.37uA. Są to wartości zbliżone do kontrolra STM32F303K8, opartego na tym samym rdzeniu. Pracujący układ, w zależności od konfiguracji, zużywa 2.8-6.3mA. Dodatkowo, nRF52840 posiada wbudowane PMU (Power Management Unit), które automatycznie zarządza zużywaną energią, bez ingerencji użytkownika. Zaletą, jest również bardzo obszerna dokumentacja\cite{NRF52840}, dedykowane fora wsparcia oraz powszechność stosowania tego układu w urządzeniach.
 
 \subsubsection{Wybór mikrokontrolera}
-Porównanie układów pokazało, że prosta ATmega328p znacząco odstaje od pozostałych układów. Mimo, że jest najprostszym z układów, nie mógł zostać wykorzystany w pracy, ze względu na wysokie zużycie energii. Problemem mogła okazać się również niewielka liczba liczników. W tym przypadku, najlepiej wypadł STM32F303K8. Niestety, jego wadą było wysokie zużycie energii w trakcie pracy. Z tego powodu, ostateczny wybór padł na nRF52840. Podsumowanie porównania, obrazuje poniższa tabela.\ref{tab:microcontroller}
+Porównanie układów pokazało, że prosta ATmega328p znacząco odstaje od pozostałych układów. Mimo, że jest najprostszym z układów, nie mogła zostać wykorzystana w pracy, ze względu na wysokie zużycie energii. Problemem mogła okazać się również niewielka liczba liczników. W tym przypadku, najlepiej wypadł STM32F303K8. Niestety, jego wadą było wysokie zużycie energii w trakcie pracy. Z tego powodu, ostateczny wybór padł na nRF52840. Podsumowanie porównania, obrazuje poniższa tabela.\ref{tab:microcontroller}
 
 \begin{table}[h]
     \centering
@@ -104,7 +101,7 @@ Porównanie układów pokazało, że prosta ATmega328p znacząco odstaje od pozo
         \hline
         UART & 1 & 3 & 2\\
         \hline
-        Przerwania zewnętrzne & 2 & 16 & 48\\
+        Przerwania zewnętrzne & 2 & 32/64 & 48\\
         \hline
         System operacyjny & Brak & Free RTOS & Zephyr RTOS\\
         \hline
@@ -114,16 +111,16 @@ Porównanie układów pokazało, że prosta ATmega328p znacząco odstaje od pozo
     \end{table}
 
 \subsection{Modem GSM/LTE}
-Modem GSM/LTE to układ pozwalający na komunikację przez sieci komórkowe 4G lub GSM. Zastosowanie tego typu komunikacji, pozwoliło zapewnić dostęp do sieci niemal niezależnie od miejsca w którym znajdowało się urządzenie. Ponieważ procedura autentykacji do sieci jest czasochłonna i wymaga radzia, działającego z dużą mocą. Zgodnie z przewidywaniami, był jest to układ o największym zużyciu energii. Minimalnym wymaganiem dotyczącym tego układu, jest obsługa SMS. Podczas rozważań nad wyborem modemu, dodatkową zaletą była obsługa zapytań HTTP. Pozwoliła ona na przetestowanie alternatywnego podejścia do problemu powiadamiania.
+Modem GSM/LTE to układ pozwalający na komunikację przez sieci komórkowe 4G lub GSM. Zastosowanie tego typu komunikacji, pozwoliło zapewnić dostęp do sieci niemal niezależnie od miejsca w którym znajdowało się urządzenie. Ponieważ procedura autentykacji do sieci jest czasochłonna i wymaga radia, działającego z dużą mocą. Zgodnie z przewidywaniami, jest to układ o największym zużyciu energii. Minimalnym wymaganiem dotyczącym tego układu, jest obsługa SMS. Podczas rozważań nad wyborem modemu, dodatkową zaletą była obsługa zapytań HTTP. Pozwoliła ona na przetestowanie alternatywnego podejścia do problemu powiadamiania.
 
 \subsubsection{SIM800L}
-SIM800L to jeden z najpopularniejszych układów do amatorskich rozwiązań. Jego największymi zaletami są cena i mnogość dostępnych bibliotek czy przykładów. Niestety, głównie dedykowanych do mikrokontrolera ATmega328p. Zastosowanie go z innymi układami nie jest jednak problemem, ponieważ działa on w oparciu o tak zwane komendy AT, wysyłane przez UART. Pobór prądu tego modemu, mieści się pomiędzi 150, a 450mA podczas transmisji danych. oraz 50-60$\mu$ w trybie PowerDown. Co ważne, podczas uruchamiania, układ pobiera do 2A prądu, co jest wartością bardzo dużą, w przypadku układów zasilanych bateryjnie. Niestety, układ ten działa z przestarzałymi już sieciami GSM i nie obsługuje zapytań HTTP.\cite{SIM800L}
+SIM800L to jeden z najpopularniejszych modemów do amatorskich rozwiązań. Jego największymi zaletami są cena i mnogość dostępnych bibliotek czy przykładów. Niestety, głównie dedykowanych do mikrokontrolera ATmega328p. Zastosowanie go z innymi układami nie jest jednak problemem, ponieważ działa on w oparciu o tak zwane komendy AT, wysyłane przez UART. Pobór prądu tego modemu, mieści się pomiędzy 150, a 450mA podczas transmisji danych oraz 50-60$\mu$ w trybie PowerDown. Co ważne, podczas uruchamiania, układ pobiera do 2A prądu, co jest wartością bardzo dużą, w przypadku układów zasilanych bateryjnie. Niestety, układ ten działa z przestarzałymi już sieciami GSM i nie obsługuje zapytań HTTP.\cite{SIM800L}
 
 \subsubsection{Quectel EC20 R2.1}
-Jest to jeden z łatwo dostępnych na rynku układów, działających w oparciu o technologię LTE. komunikacja z nim, przebiega przy użyciu komend AT. Układ, wspiera możliwość wysyłania zapytań HTTP. Pobór prądu modemu, osiąga 300mA, jednak w tybie PowerDown, wynosi jedynie 11$\mu$A. Jest to więc wartość ponad pięciokrotnie mniejsza, niż w przypadku SIM800L. Jest to ważne, ponieważ projektowane urządzenie miało pracować większość czasu w trybie całkowitego uśpienia. W przypadku tego układu, problemem było również znalezienie pełnej dokumentacji.
+Jest to jeden z łatwo dostępnych na rynku układów, działających w oparciu o technologię LTE. Komunikacja z nim, przebiega przy użyciu komend AT. Układ, wspiera możliwość wysyłania zapytań HTTP. Pobór prądu modemu, osiąga 300mA, jednak w tybie PowerDown, wynosi jedynie 11$\mu$A. Jest to więc wartość ponad pięciokrotnie mniejsza, niż w przypadku SIM800L. Jest to ważne, ponieważ projektowane urządzenie miało pracować większość czasu w trybie całkowitego uśpienia. W przypadku tego układu, problemem było również znalezienie pełnej dokumentacji.
 
 \subsubsection{SKY66430}
-Jest to produkt firmy Skyworks, specjalizującej się w tworzeniu półprzewodników do układów radiowych i komunikacji mobilnej. Wybrany modem, działa w technologii LTE-M, co wymagało zakup specjalnych kart SIM. Układy LTE-M, zużywają znacznie mniej energii niż układy komunikujące się przez zwykłą sieć 4G. Są też w stanie transmitować z miejsc, o bardzo słabym zasięgu. SKY66430 podczas transmisji pobiera 150-250mA prądu, a w trybie PowerDown jedynie 1$\mu$A. Wartości te, uczyniły go więc najlepszym z rozważanych układów. Dodatkowym jego atutem jest obsługa zapytań HTTP. \cite{SKY66430}
+Jest to produkt firmy Skyworks, specjalizującej się w tworzeniu półprzewodników do układów radiowych i komunikacji mobilnej. Wybrany modem, działa w technologii LTE-M, co wymagało zakupu specjalnych kart SIM. Układy LTE-M, zużywają znacznie mniej energii niż układy komunikujące się przez zwykłą sieć 4G. Są też w stanie transmitować z miejsc, o bardzo słabym zasięgu. SKY66430 podczas transmisji pobiera 150-250mA prądu, a w trybie PowerDown jedynie 1$\mu$A. Wartości te, uczyniły go więc najlepszym z rozważanych układów. Dodatkowym jego atutem jest obsługa zapytań HTTP. \cite{SKY66430}
 
 \begin{table}[h]
     \centering
@@ -148,19 +145,19 @@ Jest to produkt firmy Skyworks, specjalizującej się w tworzeniu półprzewodni
 Analizując powyższe dane, nie sposób było wybrać układ inny, niż SKY66430. Jest to układ o zdecydowanie najniższym zużyciu energii. Co więcej, wspiera on zapytania HTTP, co pozwoliło na przeprowadzenie dodatkowych testów projektu.
 
 \subsection{GPS}
-GPS, czyli Global Positioning System, to system nawigacji oparty na lokalizacji satelitarnej. Jego zadaniem, jest dostarczenie użytkownikom informacji o ich położeniu. W przypadku projektowanego urządzenia, kluczowym było pozyskanie możliwie dokładnej lokalizacji. Tak jak w przypadku pozostałych komponentów, układ powinien był charkteryzować się jak najniższym zużyciem energii. Ponieważ układ ten mógł okazać się najbardziej energochłonny, dodatkowym wymaganiem była możliwość jego wyłączenia. Istotnym elementem była również dokładność określanego położenia. Jako wystarczająca, uznana została dokładność 100m.
+GPS, czyli Global Positioning System, to system nawigacji oparty na lokalizacji satelitarnej. Jego zadaniem, jest dostarczenie użytkownikom informacji o ich położeniu. W przypadku projektowanego urządzenia, kluczowym było pozyskanie możliwie dokładnej lokalizacji. Tak, jak w przypadku pozostałych komponentów, układ powinien był charkteryzować się jak najniższym zużyciem energii. Ponieważ układ ten mógł okazać się wyjątkowo energochłonny, dodatkowym wymaganiem była możliwość jego szybkiego wyłączenia. Istotnym elementem była również dokładność określanego położenia. Jako wystarczająca, uznana została dokładność 100m.
 
 \subsubsection{Beitian BN-220}
-Jest to jeden z najtańszych układów dostępnych na rynku. Układ, komunikuje się przy użyciu interfejsu UART, przesyłając wiadomości NMEA. Są to zdania, zapisane kodem ASCII, ustandaryzowanej strukturze. Zgodnie z dokumentacją, układ pobiera około 50mA i jest zasilany napięciem 5V.\cite{BN220}
+Jest to jeden z najtańszych układów dostępnych na rynku. Komunikuje się przy użyciu interfejsu UART, przesyłając wiadomości NMEA. Są to zdania, zapisane kodem ASCII, o ustandaryzowanej strukturze. Zgodnie z dokumentacją, układ pobiera około 50mA i jest zasilany napięciem 5V.\cite{BN220}
 
 \subsubsection{Mediatek MT3339}
-Kolejny układ, zasilany jest napięciem 3.3V i pobiera około 3mA prądu. Tak, jak BN-220, komunukuje się przy użyciu wiadomości NMEA, jednak korzystając z magistrali I$^{2}$C. Dodatkowo, układ ten, posiada wewnętrzny zegar czasu rzeczywistego, pozwalający na wybudzenie układu ze stanu uśpienia. Ciekawą funkcjonalnością tego modułu, jest obsługa EPO. Jest to predykcja położenia satelit, na podstawie czasu i zapisanego w pamięci pliku. Dzięki temu rozwiązaniu, można znacząco skracać czas określania lokalizacji. Dokładność urządzenia to około 3m, co jest wartością znacznie większą niż zakładana.\cite{MT3339}
+Kolejny układ, zasilany jest napięciem 3.3V i pobiera około 3mA prądu. Tak, jak BN-220, komunikuje się przy użyciu wiadomości NMEA, jednak korzystając z magistrali I$^{2}$C. Dodatkowo, układ ten, posiada wewnętrzny zegar czasu rzeczywistego, pozwalający na wybudzenie układu ze stanu uśpienia. Ciekawą funkcjonalnością tego modułu, jest obsługa EPO. Jest to predykcja położenia satelit, na podstawie czasu i zapisanego w pamięci pliku. Dzięki temu rozwiązaniu, można znacząco skracać czas określania lokalizacji. Dokładność urządzenia to około 3m, co jest wartością znacznie większą niż zakładana.\cite{MT3339}
 
 \subsubsection{Mediatek MT3333}
 MT3333 to układ bardzo zbliżony do wspomnianego wcześniej MT3339. Różnią się one zużyciem energii. W przypadku MT3333, pobór prądu wynosi od 5 do 19mA. Podobnie jak poprzednik, komunikuje się on przy użyciu wiadomości NMEA, przesyłanych magistralą I$^{2}$C.\cite{MT3333}
 
 \subsubsection{Wybór modułu GPS}
-Pomimo, że układ MT3339 cechuje się najmniejszym zużyciem energii oraz posiada interesujące funkcjonalności, zdecydowano się na wybór modułu Mediatek MT3333. Wynikło to bezpośrednio z faktu, że w momencie tworzenia pracy, dostępna była tylko dokumentacja do układu MT3333. Ponieważ jednak układy te są zgode ze standardem oraz korzystają z tego samego interfejsu komunikacji, możliwą byłaby podmiana układów.
+Pomimo, że układ MT3339 cechuje się najmniejszym zużyciem energii oraz posiada interesujące funkcjonalności, zdecydowano się na wybór modułu Mediatek MT3333. Wynikło to bezpośrednio z faktu, że w momencie tworzenia pracy, dostępna była tylko dokumentacja do układu MT3333. Ponieważ jednak, układy te są zgode ze standardem oraz korzystają z tego samego interfejsu komunikacji, możliwą byłaby podmiana układów.
 
 \begin{table}[h]
     \centering
@@ -179,8 +176,8 @@ Pomimo, że układ MT3339 cechuje się najmniejszym zużyciem energii oraz posia
 
 
 \section{Podsumowanie wyboru sprzętu}
-Rozważane w sekcji \ref{sec:technical_analysis} komponenty, zostały dobrane przede wszystkim ze względu na niskie zużycie energii. Każdy z wybranych komponentów, testowany był przy użyciu płytek rozwojowych, dostępnych w sklepach. Dodatkowo, taki wybór komponentów, pozwolił skorzystać z gotowej płytki PCB, stosowanej w jednym z dostępnych na rynku urządzeń. Zmiana oprogramowania urządzenia, przy użyciu programatora J-link, pozwoliła zupełnie zmienić jego zastosowanie. Takie podejście, umożliwiło rownież stworzenie prototypu urządzenia, które rozwijane może trafić na rynek, bez kosztownego projektowania nowych płytek PCB. (rys. \ref{img:pcb})
-
+Rozważane w sekcji \ref{sec:technical_analysis} komponenty, zostały dobrane przede wszystkim ze względu na niskie zużycie energii. Każdy z wybranych komponentów, testowany był przy użyciu płytek rozwojowych, dostępnych w sklepach. Dodatkowo, taki wybór komponentów, pozwolił skorzystać z gotowej płytki PCB, stosowanej w jednym z dostępnych na rynku urządzeń. Zmiana oprogramowania, przy użyciu programatora J-link, pozwoliła zupełnie zmienić jego zastosowanie. Takie podejście, umożliwiło rownież stworzenie prototypu urządzenia, które rozwijane może trafić na rynek, bez kosztownego projektowania nowych płytek PCB. (rys. \ref{img:pcb})
+1
 \begin{figure}[t]
     \centering
     \includegraphics[width=7cm]{Graphics/PCB.png}
@@ -188,7 +185,7 @@ Rozważane w sekcji \ref{sec:technical_analysis} komponenty, zostały dobrane pr
     \label{img:pcb}
 \end{figure}
 \section{Podobne rozwiązania obecne na rynku}
-Podobne rozwiązanie, zaproponowała firma Specialized. Inżynierowie stworzyli urządzenie o nazwie ANGI, widoczne na rysunku \ref{img:angi_img}. Jest to mały układ, wyposażony w akcelerometr i żyroskop. Komunikuje się on przy użyciu Bluetooth z ich autorską aplikacją na telefon z iOS lub Androidem. Urządzenie, zamontowane na kask, wysyła powiadomienie do aplikacji, gdy rowerzysta uderza kaskiem w przeszkodę. Rozwiązanie to, ma szereg zalet, takich jak prostota budowy i bardzo niskie zużycie energii. Jest ono jednak uzależnione od telefonu, który w przypadku wycieczek górskich, czasem wygodniej zostawić w domu.
+Podobne rozwiązanie, zaproponowała firma Specialized. Inżynierowie, stworzyli urządzenie o nazwie ANGI, widoczne na rysunku \ref{img:angi_img}. Jest to mały układ, wyposażony w akcelerometr i żyroskop. Komunikuje się on przy użyciu Bluetooth z ich autorską aplikacją na telefon z iOS lub Androidem. Urządzenie, zamontowane na kask, wysyła powiadomienie do aplikacji, gdy rowerzysta uderza kaskiem w przeszkodę. Rozwiązanie to, ma szereg zalet, takich jak prostota budowy i bardzo niskie zużycie energii. Jest ono jednak uzależnione od telefonu, który w przypadku wycieczek górskich, czasem wygodniej zostawić w domu.
 \begin{figure}[h]
 \includegraphics[width=7cm]{Graphics/angi.png}
 \centering
