--- a/Thesis/podsumowanie.tex
+++ b/Thesis/podsumowanie.tex
@@ -1,2 +1,2 @@
 \chapter{Podsumowanie}
-W pracy podniesiono problem bezpieczeństwa samotnych rowerzystów, podczas wyjazdów górskich. Zdecydowano się zbudować urządzenie, mające poprawić jakość bezpieczeństwa na rowerze. W rozdziale pierwszym, określone zostały podstawowe wymagania, dotyczące układu. Podjęto też decyzję, o wykorzystaniu mikrokontrolera,akcelerometru, modułu GPS oraz modemu LTE. Dla każdego z podzespołów, dokonano analizy dostępnych rozwiązań, a następnie na jej podstawie, wybrano najlepszy z nich. Nie pominięto również przedstawienia podobnych rozwiązań, obecnych na rynku. Rodział drugi stanowi dokumentację z procesu tworzenia urządzenia. Stworzono prostą platformę do zbierania danych, wykorzystując dostępne układy oraz druk 3D. Korzystając ze stworzonego urządzenia, przeprowadzono eksperymenty, celem zebrania surowych danych. Dane te, przetworzono i poddano szczegółowej analizie. Wyniki, przekształcono w algorytmy, służące wykrywaniu wypadku rowerowego. Następnie, opisano logikę tworzonej aplikacji. Na potrzeby urządzenia, przetestowano dwa różne podejścia do analizy danych, wybierając bardziej energooszczędne maszyny stanów programowane w akcelerometrze. Opisano rówież procedurę pobierania przez urządzenie lokalizacji, kluczową dla poprawnego działania rozwiązania. Opisując implementację powiadamiania o zdarzeniu przy użyciu LTE, opisano dwie różne metody wysłania powiadomienia: zapytanie http oraz powiadomienie SMS. Ze względu na stabilność, zaimplementowano metodę drugą. Ponieważ wymagała ona wprowadzenia do kodu numeru telefonu, dodano stos Bluetooth, pozwalający na łatwe jego wpisanie do pamięci mikrokontrolera. W rodziale trzecim, przeprowadzone zostały testy wykonanego urządzenia. Przeanalizowano pobierany przez nie prąd oraz przedstawione kolejne etapy działania na wykresie zależności prądu od czasu. Porównano również zaproponowane algorytmy do zebranych przebiegów, prezentując ich działanie. Rozdział czwarty stanowi opis możliwych kierunków rozwoju urządzenia oraz możliwości jego rozbudowy.
+W pracy, podniesiono problem bezpieczeństwa samotnych rowerzystów, podczas wyjazdów górskich. Zdecydowano się zbudować urządzenie, mające poprawić poziom bezpieczeństwa na rowerze. W rozdziale pierwszym, określone zostały podstawowe wymagania, dotyczące układu. Podjęto też decyzję, o wykorzystaniu mikrokontrolera, akcelerometru, modułu GPS oraz modemu LTE. Dla każdego z podzespołów, dokonano analizy dostępnych rozwiązań, a następnie na jej podstawie, wybrano najlepszy z nich. Nie pominięto również przedstawienia podobnych rozwiązań, obecnych na rynku. Rodział drugi stanowi dokumentację z procesu tworzenia urządzenia. Stworzono prostą platformę do zbierania danych, wykorzystując dostępne układy oraz druk 3D. Korzystając ze stworzonego urządzenia, przeprowadzono eksperymenty, celem zebrania surowych danych. Dane te, przetworzono i poddano szczegółowej analizie. Wyniki, przekształcono w algorytmy, służące wykrywaniu wypadku rowerowego. Następnie, opisano logikę tworzonej aplikacji. Na potrzeby urządzenia, przetestowano dwa różne podejścia do analizy danych, wybierając bardziej energooszczędne maszyny stanów programowane w akcelerometrze. Opisano rówież procedurę pobierania przez urządzenie lokalizacji, kluczową dla poprawnego działania rozwiązania. Opisując implementację powiadamiania o zdarzeniu przy użyciu LTE, opisano dwie różne metody wysłania powiadomienia: zapytanie http oraz powiadomienie SMS. Ze względu na stabilność, zaimplementowano metodę drugą. Ponieważ wymagała ona wprowadzenia do kodu numeru telefonu, dodano stos Bluetooth, pozwalający na łatwe jego wpisanie do pamięci mikrokontrolera. W rodziale trzecim, przeprowadzone zostały testy wykonanego urządzenia. Przeanalizowano pobierany przez nie prąd oraz przedstawiono kolejne etapy działania na wykresie zależności prądu od czasu. Porównano również zaproponowane algorytmy do zebranych przebiegów, prezentując ich działanie. Rozdział czwarty stanowi opis możliwych kierunków rozwoju urządzenia oraz możliwości jego rozbudowy.
